# PoorviCompiler

./: CMakeLists.txt  README.md  main.cpp
include/: arena.h  ast.h  codegen.h  ir.h  lexer.h  parser.h  semantic.h
src/: codegen.cpp  ir.cpp  lexer.cpp  parser.cpp  semantic.cpp
test/: test.pv
